--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vue-flow/core": "^1.2.1",
-    "vue": "^3.2.41"
+    "@types/node": "^18.11.8",
+    "d3-dag": "^0.11.5",
+    "d3-hierarchy": "^3.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.1.2",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@types/d3-hierarchy": "^3.1.0",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0",
-    "vue-tsc": "^1.0.9"
+    "vite": "^3.2.0"
   }
 }
